--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		</div>
 		
 <!-- =========================== Social media links ===================== -->
-		<a href="https://publons.com/resracher/1454260/robin-delabays/" target="_blank">
-			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:15vw;" class="socialmedia">
+		<a href="http://www.webofscience.com/wos/author/record/A-5901-2019" target="_blank">
+			<img src="images/wos.png" alt="WebOfScience" style="width:40px; margin-right:15vw;" class="socialmedia">
 		</a>
 		<a href="https://www.researchgate.net/profile/Robin_Delabays" target="_blank">
 			<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;margin-right:10px;" class="socialmedia">
