Added "La Matrice"

--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 			Since August 2022, I am an Assistant Professor at the School of Engineering of the University of Applied Sciences of Western Switzerland (HES-SO), in Sion (CH). 
 			I am teach mathematics young engineers and pursuing my research on the interplay between network structures and dynamical systems, with special focus on power grids.
 		</p>
+		
+		<p class="text">
+			In 2023, I have been invited to join the association 
+			<i><a href="https://www.la-matrice.ch/" target="_blank">La Matrice</a></i>, 
+			whose purpose is to promote sciences and mathematics, through the prism of feminism and sustainability.
+		</p>
 
 		<p class="text">
 			A more formal CV, including a list of publications, can be found 
@@ -524,7 +530,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on February 6th, 2023.
+				Last updated on March 2nd, 2023.
 				<br><br><br>
 			</p>
 		</div>
