--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
-		<img src="images/happiness.jpg" alt="RDelabays" style="width: 30vw; margin-right: 15vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
+		<img src="images/rd.jpg" alt="RDelabays" style="width: 30vw; margin-right: 15vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
 	
 		<p class="text">
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
