--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
 		
 		<ul>
 			<li>
+				<rd>R. Delabays</rd> and F. Bullo,
+				<a href="docs/articles/Delabays23a.pdf" target="_blank" class="publication">Semicontraction and Synchronization of Kuramoto-Sakaguchi Oscillator Networks</a>,
+				submitted (2023).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2303.10127" target="_blank">2303.10127</a>
+
+			<li>
 				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
 				<a href="docs/articles/Delabays22e.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>,
 				submitted (2022).
@@ -530,7 +536,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on March 2nd, 2023.
+				Last updated on March 20th, 2023.
 				<br><br><br>
 			</p>
 		</div>
