--- a/index.html
+++ b/index.html
@@ -42,44 +42,11 @@
 		<br>
 		<br>
 <!-- ======================= Sections ========================== -->
-		<p><a href="#aboutme">About me</a> - <a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
+		<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#jphyscomplexity"> JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
 
 
 		<hr>
 		
-<!-- ======================= JPhys Complexity ================== -->
-		<h1 id="jphyscomplexity">Journal of Physics: Complexity - Focus Issue</h1>
-		
-		<p class="text">
-			Since April 2022, I am a Guest Editor for <i>Journal of Physics: Complexity</i>. 
-			I am collaborating with 
-			<a href="https://scholar.google.com/citations?hl=en&user=2d7KHqsAAAAJ" target="_blank">Laurent Pagnier</a> (University of Arizona), 
-			<a href="https://www.iai.kit.edu/english/2154_4101.php" target="_blank">Benjamin Sch&auml;fer</a> (Karlsruhe Institute of Technology), 
-			<a href="https://www.melvyntyloo.com" target="_blank">Melvyn Tyloo</a> (Los Alamos National Laboratory),
-			and
-			<a href="https://www.fz-juelich.de/iek/iek-ste/EN/AboutUs/LeitendeMitarbeiter/Witthaut/Witthaut_node.html" target="_blank">Dirk Witthaut</a> (Forschungszentrum J&uuml;lich)
-			on the Focus Issue 
-		</p>
-		<p style="text-align:center">
-			<a href="https://iopscience.iop.org/journal/2632-072X/page/focus-on-monitoring-and-control-of-complex-supply-systems" target="_blank"><rd>Monitoring and control of complex supply systems</rd></a>.
-		</p>
-		<p class="text"> 
-			The topics covered are:
-			<ul>
-				<li>Complex systems state estimation;
-				<li>Network inference techniques;
-				<li>Learning and control of supply networks;
-				<li>Disturbance identification and mitigation. 
-			</ul>
-		</p>
-		
-		<p class="text">
-			I am happy to discuss any potential submission in more details. 
-			Submission deadline: <b>April 1st, 2023.</b>
-		</p>
-		
-		<hr>
-
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
@@ -490,6 +457,36 @@
 
 		<hr>
 		
+<!-- ======================= JPhys Complexity ================== -->
+		<h1 id="jphyscomplexity">Journal of Physics: Complexity - Focus Issue</h1>
+		
+		<p class="text">
+			From April 2022 to April 2023, I was a Guest Editor for <i>Journal of Physics: Complexity</i>. 
+			I was collaborating with 
+			<a href="https://scholar.google.com/citations?hl=en&user=2d7KHqsAAAAJ" target="_blank">Laurent Pagnier</a> (University of Arizona), 
+			<a href="https://www.iai.kit.edu/english/2154_4101.php" target="_blank">Benjamin Sch&auml;fer</a> (Karlsruhe Institute of Technology), 
+			<a href="https://www.melvyntyloo.com" target="_blank">Melvyn Tyloo</a> (Los Alamos National Laboratory),
+			and
+			<a href="https://www.fz-juelich.de/iek/iek-ste/EN/AboutUs/LeitendeMitarbeiter/Witthaut/Witthaut_node.html" target="_blank">Dirk Witthaut</a> (Forschungszentrum J&uuml;lich)
+			on the Focus Issue 
+		</p>
+		<p style="text-align:center">
+			<a href="https://iopscience.iop.org/journal/2632-072X/page/focus-on-monitoring-and-control-of-complex-supply-systems" target="_blank"><rd>Monitoring and control of complex supply systems</rd></a>.
+		</p>
+		<p class="text"> 
+			The topics covered were:
+			<ul>
+				<li>Complex systems state estimation;
+				<li>Network inference techniques;
+				<li>Learning and control of supply networks;
+				<li>Disturbance identification and mitigation. 
+			</ul>
+		</p>
+		
+			<a href="#top" class="btt">Back to top</a>
+		
+		<hr>
+
 <!-- ============================= CCS 2021 ==================================== -->
 		<img src="images/ccs21.jpg" alt="CCS21" style="width:5vw; max-width:125px; min-width:80px; margin-right:15vw;" align="right" hspace="20px">
 		
@@ -536,7 +533,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on March 20th, 2023.
+				Last updated on April 19th, 2023.
 				<br><br><br>
 			</p>
 		</div>
