--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 		<p class="text">
 			A more formal CV, including a list of publications, can be found 
-			<a href="docs/cv_rdelabays.pdf" target="_blank">here</a>.
+			<a href="docs/cv-rdelabays.pdf" target="_blank">here</a>.
 		</p>
 
 		<h3 class="list">Recent occupations at a glance:</h3>
@@ -161,7 +161,7 @@
 		
 		<p>
 			A pdf version of my list of publication is available in 
-			<a href="docs/cv_rdelabays.pdf" target="_blank">my CV</a>. 
+			<a href="docs/cv-rdelabays.pdf" target="_blank">my CV</a>. 
 			All manuscripts are available on the 
 			<a href="https://arxiv.org/search/?searchtype=author&query=Delabays,+R" target="_blank">arXiv</a>.
 		</p>
