--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				<a href="docs/articles/Delabays23a.pdf" target="_blank" class="publication">Semicontraction and Synchronization of Kuramoto-Sakaguchi Oscillator Networks</a>,
 				IEEE Control Syst. Lett. - Early Access (2023).
 				<bf><ps>DOI: <a href="https://doi.org/10.1109/LCSYS.2023.3275169" target="_blank">10.1109/LCSYS.2023.3275169</a>
-				- <ps>arXiv: <a href="https://arxiv.org/abs/2303.10127" traget="_blank">2303.10127</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2303.10127" target="_blank">2303.10127</a>
 				
 			<li>
 				T. T. Nguyen, R. C. Budzinski, F. W. Pasini, <rd>R. Delabays</rd>, J. Min&aacute;&#269;, and L. E. Muller,
