--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 			<li>
 				<rd>R. Delabays</rd> and F. Bullo,
 				<a href="docs/articles/Delabays23a.pdf" target="_blank" class="publication">Semicontraction and Synchronization of Kuramoto-Sakaguchi Oscillator Networks</a>,
-				IEEE Control Syst. Lett. - Early Access (2023).
+				IEEE Control Syst. Lett. <b>7</b>, 1566 (2023).
 				<bf><ps>DOI: <a href="https://doi.org/10.1109/LCSYS.2023.3275169" target="_blank">10.1109/LCSYS.2023.3275169</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2303.10127" target="_blank">2303.10127</a>
 				
@@ -534,7 +534,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on May 12th, 2023.
+				Last updated on May 18th, 2023.
 				<br><br><br>
 			</p>
 		</div>
