--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</p>
 		
 		<p class="text">
-			In 2019, I had the oportunity to visit the 
+			In 2019, I had the opportunity to visit the 
 			<a href="https://cnls.lanl.gov/External/" target="_blank">Center for Nonlinear Studies</a> 
 			(CNLS) at the Los Alamos National Laboratory (LANL).
 			There, my work with 
