--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 		</p>
 		
 <!-- ======================= Preprints ================================ -->
-		
+<!--	
 		<h2>Preprints</h2>
 		
 		<ul>
@@ -178,11 +178,18 @@
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2211.16064" target="_blank">2211.16064</a>
 		</ul>
 
-
+-->
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
+				<a href="docs/articles/Delabays23b.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>,
+				Phys. Rev. X Energy <b>2</b>, 023009 (2023).
+				<bf><ps>DOI: <a href="https://doi.org/10.1103/PRXEnergy.2.023009" target="_blank">10.1103/PRXEnergy.2.023009</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2211.16064" target="_blank">2211.16064</a>
+
 			<li>
 				<rd>R. Delabays</rd> and F. Bullo,
 				<a href="docs/articles/Delabays23a.pdf" target="_blank" class="publication">Semicontraction and Synchronization of Kuramoto-Sakaguchi Oscillator Networks</a>,
@@ -534,7 +541,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on May 18th, 2023.
+				Last updated on June 8th, 2023.
 				<br><br><br>
 			</p>
 		</div>
