--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
 		
 		<img src="images/rd.jpg" alt="RDelabays" style="width: 30vw; margin-right: 15vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
 	
+		<p class="list">
+			<b>Since Aug. 2022:</b> Assistant Professor at HES-SO, in Sion, Switzerland.<br>
+			<b>Oct. 2020 - Aug. 2022:</b> Postdoc at UCSB with Prof. F. Bullo.<br>
+			<b>Jun. 2018 - Jul. 2020:</b> Postdoc between HES-SO and ETHZ with Profs. P. Jacquod and F. D&ouml;rfler.<br>
+			<b>Jul. - Aug. 2019:</b> Visiting postdoc at LANL with A. Lokhov and M. Vuffray.<br>
+			<b>Dec. 2014 - May 2018:</b> PhD at HES-SO with Prof. P. Jacquod.
+		</p>
+
 		<p class="text">
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
 			<a href="https://etranselec.ch" target="_blank">Prof. Philippe Jacquod</a>.
@@ -98,15 +106,6 @@
 		<p class="text">
 			A more formal CV, including a list of publications, can be found 
 			<a href="docs/cv-rdelabays.pdf" target="_blank">here</a>.
-		</p>
-
-		<h3 class="list">Recent occupations at a glance:</h3>
-		<p class="list">
-			<b>Since Aug. 2022:</b> Assistant Professor at HES-SO.<br>
-			<b>Oct. 2020 - Aug. 2022:</b> Postdoc at UCSB with Prof. F. Bullo.<br>
-			<b>Jun. 2018 - Jul. 2020:</b> Postdoc between HES-SO and ETHZ with Profs. P. Jacquod and F. D&ouml;rfler.<br>
-			<b>Jul. - Aug. 2019:</b> Visiting postdoc at LANL with A. Lokhov and M. Vuffray.<br>
-			<b>Dec. 2014 - May 2018:</b> PhD at HES-SO with Prof. P. Jacquod.
 		</p>
 
 		<a href="#top" class="btt">Back to top</a>
@@ -373,6 +372,10 @@
 		<p><i>All conference material is under CC-BY license.</i></p>
 
 		<ul>
+			<li>
+				<b>Jul. 10 - 14, 2023:</b> NetSci 2023, Vienna.
+				<br><rd>Talk:</rd> <a href="docs/conferences/NetSci23.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>.
+
 			<li>
 				<b>Sep. 13 - 15, 2022:</b> SIAM Network Science Workshop 2022, Online.
 				<br><rd>Talk:</rd> <a href="docs/conferences/SIAM-NS22.pdf" target="_blank" class="publication">Complex networks of lossy oscillators: Multistability, anomalies, and loop flows in power grids</a>.
