--- a/index.html
+++ b/index.html
@@ -373,7 +373,11 @@
 
 		<ul>
 			<li>
-				<b>Jul. 10 - 14, 2023:</b> NetSci 2023, Vienna.
+				<b>Jul. 17 - 20, 2023:</b> IC2S2 2023, Copenhagen, Denmark.
+				<br><rd>Poster:</rd> <a href="docs/conferences/IC2S2-23.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of papers within scientific journals</a>.
+
+			<li>
+				<b>Jul. 10 - 14, 2023:</b> NetSci 2023, Vienna, Austria.
 				<br><rd>Talk:</rd> <a href="docs/conferences/NetSci23.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>.
 
 			<li>
@@ -544,7 +548,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on July 14th, 2023.
+				Last updated on July 19th, 2023.
 				<br><br><br>
 			</p>
 		</div>
