Couple of web links

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 		<h1 id="geocow20">GeoCoW 2020</h1>
 		
 		<p>
-		From February 2nd to 5th, 2020, I co-organized the workshop <a href="https://sites.google.com/view/geocow2020/home" target="_blank"><rd>Geometry of Complex Webs (GeoCoW)</rd></a> with Matthieu Jacquemet (HES-SO and UniFR) and Christian Mazza (UniFR). 
+		From February 2nd to 5th, 2020, I co-organized the workshop <a href="https://sites.google.com/view/geocow2020/home" target="_blank"><rd>Geometry of Complex Webs (GeoCoW)</rd></a> with <a href="https://sites.google.com/view/matthieujacquemet/home" target="_blank">Matthieu Jacquemet</a> (HES-SO and UniFR) and <a href="https://homeweb.unifr.ch/mazzac/Pub/" target="_blank">Christian Mazza</a> (UniFR). 
 		It took place in the nice alpine village of Les Diablerets, Switzerland.
 		</p>
 
@@ -548,7 +548,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on July 19th, 2023.
+				Last updated on August 14th, 2023.
 				<br><br><br>
 			</p>
 		</div>
