--- a/index.html
+++ b/index.html
@@ -165,19 +165,17 @@
 			<a href="https://arxiv.org/search/?searchtype=author&query=Delabays,+R" target="_blank">arXiv</a>.
 		</p>
 		
-<!-- ======================= Preprints ================================ -->
-<!--	
+<!-- ======================= Preprints ================================ -->	
 		<h2>Preprints</h2>
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
-				<a href="docs/articles/Delabays22e.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>,
-				submitted (2022).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2211.16064" target="_blank">2211.16064</a>
+				G. M. Givi, <rd>R. Delabays</rd>, M. Jacquemet, and P. Jacquod,
+				<a href="docs/articles/Givi23.pdf" target="_blank" class="publication">On the robustness of democratic electoral processes to computational propaganda</a>,
+				submitted (2023).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2308.11569" target="_blank">2308.11569</a>
 		</ul>
 
--->
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
@@ -548,7 +546,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on August 14th, 2023.
+				Last updated on August 23th, 2023.
 				<br><br><br>
 			</p>
 		</div>
