--- a/index.html
+++ b/index.html
@@ -53,27 +53,31 @@
 		<img src="images/rd.jpg" alt="RDelabays" style="width: 30vw; margin-right: 15vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
 	
 		<p class="list">
-			<b>Since Aug. 2022:</b> Assistant Professor at HES-SO, in Sion, Switzerland.<br>
-			<b>Oct. 2020 - Aug. 2022:</b> Postdoc at UCSB with Prof. F. Bullo.<br>
-			<b>Jun. 2018 - Jul. 2020:</b> Postdoc between HES-SO and ETHZ with Profs. P. Jacquod and F. D&ouml;rfler.<br>
-			<b>Jul. - Aug. 2019:</b> Visiting postdoc at LANL with A. Lokhov and M. Vuffray.<br>
-			<b>Dec. 2014 - May 2018:</b> PhD at HES-SO with Prof. P. Jacquod.
+			<b>Since 2022:</b> Assistant Professor at HES-SO, in Sion, Switzerland.<br>
+			<br>
+			<b>2020 - 2022:</b> Postdoc at UCSB with Prof. F. Bullo.<br>
+			<br>
+			<b>2018 - 2020:</b> Postdoc between HES-SO and ETHZ with Profs. P. Jacquod and F. D&ouml;rfler.<br>
+			<br>
+			<b>2019:</b> Visiting postdoc at LANL with A. Lokhov and M. Vuffray.<br>
+			<br>
+			<b>2014 - 2018:</b> PhD at HES-SO with Prof. P. Jacquod.
 		</p>
 
 		<p class="text">
+			<b>2014 - 2018:</b><br>
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
 			<a href="https://etranselec.ch" target="_blank">Prof. Philippe Jacquod</a>.
 			Our interest in the stability of power grids led us to investigate the phenomenon of synchronization of newtorked agents, and in particular the conditions for the existence of multiple synchronous states in such a system.
 		</p>
 		
 		<p class="text">
+			<b>2018 - 2020:</b> <br>
 			After graduating in May 2018, I stayed in Sion as a postdoc, with frequent interactions with 
 			<a href="https://people.ee.ethz.ch/floriand/index.html" target="_blank">Prof. Florian D&ouml;rfler</a> 
 			at ETH Zurich.
 			Most of my work since then aims at a better understanding of the interplay between network structures and dynamics in systems of coupled dynamics agents.
-		</p>
-		
-		<p class="text">
+			<br><br>
 			In 2019, I had the opportunity to visit the 
 			<a href="https://cnls.lanl.gov/External/" target="_blank">Center for Nonlinear Studies</a> 
 			(CNLS) at the Los Alamos National Laboratory (LANL).
@@ -85,6 +89,7 @@
 		</p>
 
 		<p class="text">
+			<b>2020 - 2022:</b><br>
 			In 2020, I have been granted a Postdoc.Mobility grant from the Swiss National Science Foundation. 
 			This funding allowed me to work for two years in the group of 
 			<a href="https://motion.me.ucsb.edu/group.html" target="_blank">Prof. Francesco Bullo</a> 
@@ -93,6 +98,7 @@
 		</p>
 
 		<p class="text">
+			<b>Since 2022:</b><br>
 			Since August 2022, I am an Assistant Professor at the School of Engineering of the University of Applied Sciences of Western Switzerland (HES-SO), in Sion (CH). 
 			I am teach mathematics young engineers and pursuing my research on the interplay between network structures and dynamical systems, with special focus on power grids.
 		</p>
