--- a/index.html
+++ b/index.html
@@ -48,11 +48,19 @@
 		<hr>
 
 <!-- ======================= CRM =============================== -->
-		<h1 id="crm23">Colloque CRM 2023</h1>
+		<a href="https://crm.sspmp.ch/cours/" target="_blank">
+			<img src="images/crm.png" alt="CRM" style="width: 60vw; margin-right: 15vw; max-width: 300px; min-width=100px" align="right" hspace="20px" vspace="25px">
+		</a>
 
+		<h1 id="crm23">Colloque CRM 2023</h1>
+		
 		<p class="text">
 			Lien vers la page GitHub : <a href="https://github.com/r0b1nu5/bucket/tree/master/23e-crm">23e-crm</a>.
 
+		</p>
+
+		<a href="#top" class="btt">Back to top</a>
+		
 		<hr>
 
 <!-- ======================= About me ========================== -->
@@ -510,7 +518,7 @@
 			</ul>
 		</p>
 		
-			<a href="#top" class="btt">Back to top</a>
+		<a href="#top" class="btt">Back to top</a>
 		
 		<hr>
 
@@ -560,7 +568,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on August 23th, 2023.
+				Last updated on September 11th, 2023.
 				<br><br><br>
 			</p>
 		</div>
