--- a/index.html
+++ b/index.html
@@ -47,22 +47,6 @@
 
 		<hr>
 
-<!-- ======================= CRM =============================== -->
-		<a href="https://crm.sspmp.ch/cours/" target="_blank">
-			<img src="images/crm.png" alt="CRM" style="width: 60vw; margin-right: 15vw; max-width: 300px; min-width=100px" align="right" hspace="20px" vspace="25px">
-		</a>
-
-		<h1 id="crm23">Colloque CRM 2023</h1>
-		
-		<p class="text">
-			Lien vers la page GitHub : <a href="https://github.com/r0b1nu5/bucket/tree/master/23e-crm">23e-crm</a>.
-
-		</p>
-
-		<a href="#top" class="btt">Back to top</a>
-		
-		<hr>
-
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
@@ -492,6 +476,23 @@
 
 		<hr>
 		
+<!-- ======================= CRM =============================== -->
+		<a href="https://crm.sspmp.ch/cours/" target="_blank">
+			<img src="images/crm.png" alt="CRM" style="width: 60vw; margin-right: 15vw; max-width: 300px; min-width=100px" align="right" hspace="20px" vspace="25px">
+		</a>
+
+		<h1 id="crm23">Colloque CRM 2023</h1>
+		
+		<p class="text">
+			In September 2023, I was invited to give a presentation at the annual Colloquium of the CRM (<i>Commission Romande de Mathématiques</i>) about the relation between mathematical models of power grids and graph theory. 
+			The slides (in French) and associated codes are available on <a href="https://github.com/r0b1nu5/bucket/tree/master/23e-crm">GitHub</a>.
+
+		</p>
+
+		<a href="#top" class="btt">Back to top</a>
+		
+		<hr>
+
 <!-- ======================= JPhys Complexity ================== -->
 		<h1 id="jphyscomplexity">Journal of Physics: Complexity - Focus Issue</h1>
 		
@@ -568,7 +569,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 13th, 2023.
+				Last updated on September 15th, 2023.
 				<br><br><br>
 			</p>
 		</div>
