--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@
 		<hr>
 		
 <!-- ======================= CRM =============================== -->
-		<a href="https://crm.sspmp.ch/cours/" target="_blank">
+		<a href="https://crm.sspmp.ch/" target="_blank">
 			<img src="images/crm.png" alt="CRM" style="width: 60vw; margin-right: 15vw; max-width: 300px; min-width=100px" align="right" hspace="20px" vspace="25px">
 		</a>
 
 		<h1 id="crm23">Colloque CRM 2023</h1>
 		
 		<p class="text">
-			In September 2023, I was invited to give a presentation at the annual Colloquium of the CRM (<i>Commission Romande de Mathématiques</i>) about the relation between mathematical models of power grids and graph theory. 
+			In September 2023, I was invited to give a presentation at the annual <a href="https://crm.sspmp.ch/cours/" target="_blank">Colloquium of the CRM</a> (<i>Commission Romande de Mathématiques</i>) about the relation between mathematical models of power grids and graph theory. 
 			The slides (in French) and associated codes are available on <a href="https://github.com/r0b1nu5/bucket/tree/master/23e-crm">GitHub</a>.
 
 		</p>
