added page for mathphys seminar

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<br>
 		<br>
 <!-- ======================= Sections ========================== -->
-<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#crm23">CRM 2023</a> - <a href="#jphyscomplexity">JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
+<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#crm23">CRM 2023</a> - <a href="#jphyscomplexity">JPhys Complexity</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a> - <a href="mathphys-seminar.html">MathPhys Seminar<a></p>
 
 
 		<hr>
@@ -569,7 +569,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 15th, 2023.
+				Last updated on October 12th, 2023.
 				<br><br><br>
 			</p>
 		</div>
