--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			ROBIN DELABAYS	
 			<span style="float:right;">robin.delabays@hevs.ch</span>
 			<br>
-			<i>HES-SO Valais-Wallis</i>
+			<i>HES-SO Valais-Wallis, Sion, Switzerland</i>
 			<br>
 			<br>
 			</p>
@@ -569,7 +569,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 12th, 2023.
+				Last updated on October 18th, 2023.
 				<br><br><br>
 			</p>
 		</div>
