--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,9 +30,15 @@
 		
 		<ul>
 			<li>
+				November 2, 2023,<br>
+				<b>Marc Gillioz</b> (HES-SO Valais-Wallis,),<br>
+				<a href="docs/mathphys-seminar/Gillioz23.pdf" target="_blank" class="publication">Conformal field theory: physics without scales</a>.<br>
+			</li>
+			<li>
 				October 12, 2023,<br>
 				<b>Grégoire Nicollier</b> (HES-SO Valais-Wallis),<br>
 				<a href="docs/mathphys-seminar/Nicollier23.pdf" target="_blank" class="publication">Voici des voix, faites-en des sièges</a>.<br>
+			</li>
 		</ul>
 
 		<hr>
