--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,11 @@
 		
 		<ul>
 			<li>
+				November 9, 2023,<br>
+				<b>Dima Geshkenbein</b> (ETH Zurich),<br>
+				<u>Vortices in superconductors.</u><br>
+			</li>
+			<li>
 				November 2, 2023,<br>
 				<b>Marc Gillioz</b> (HES-SO Valais-Wallis,),<br>
 				<a href="docs/mathphys-seminar/Gillioz23.pdf" target="_blank" class="publication">Conformal field theory: physics without scales</a>.<br>
@@ -51,7 +56,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 18th, 2023.
+				Last updated on November 10th, 2023.
 				<br><br><br>
 			</p>
 		</div>
