added talk mazza

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,8 +30,13 @@
 		
 		<ul>
 			<li>
+				November 16, 2023,<br>
+				<b>Christian Mazza</b> (UniFR),<br>
+				<a href="docs/mathphys-seminar/Mazza23.pdf" target="_blank" class="publication">Structural instabilities of ecosystem dynamics and climate change</a>.<br>
+			</li>
+			<li>
 				November 9, 2023,<br>
-				<b>Dima Geshkenbein</b> (ETH Zurich),<br>
+				<b><i>Dima Geshkenbein</i></b> (ETH Zurich),<br>
 				<u>Vortices in superconductors.</u><br>
 			</li>
 			<li>
