added petri's talk

--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Robin Delabays | MathPhys Seminar</title>
+		<title>MathPhys Seminar</title>
 		<meta name="keywords" content="Robin, Delabays, MathPhys, Seminar, HES-SO">
 		<meta name="author" content="Robin Delabays">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Sets the viewport to make the website look good on all devices. -->
@@ -29,6 +29,10 @@
 		<h1>MathPhys Seminar</h1>
 		
 		<ul>
+			<li>
+				November 23, 2023,<br>
+				<b>Giovanni Petri</b> (Northeaster University, London),<br>
+				<a href="docs/mathphys-seminar/Petri23.pdf" target="_blank" class="publication">Informational and topological signatures of individuality and age</a>.<br>
 			<li>
 				November 16, 2023,<br>
 				<b>Christian Mazza</b> (UniFR),<br>
@@ -61,7 +65,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 17th, 2023.
+				Last updated on November 24th, 2023.
 				<br><br><br>
 			</p>
 		</div>
