Added CDC's slides

--- a/index.html
+++ b/index.html
@@ -377,88 +377,92 @@
 
 		<ul>
 			<li>
+				<b>Dec. 13 - 15, 2023:</b> IEEE CDC 2023, Singapore.
+				<br><rd>Talk:</rd> <a href="docs/conferences/23-singapore-cdc.pdf" target="_blank" class="publication">Semicontraction and Synchronization of Kuramoto-Sakaguchi Oscillator Networks</a>.
+
+			<li>
 				<b>Jul. 17 - 20, 2023:</b> IC2S2 2023, Copenhagen, Denmark.
-				<br><rd>Poster:</rd> <a href="docs/conferences/IC2S2-23.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of papers within scientific journals</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/23-copenhagen-ic2s2.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of papers within scientific journals</a>.
 
 			<li>
 				<b>Jul. 10 - 14, 2023:</b> NetSci 2023, Vienna, Austria.
-				<br><rd>Talk:</rd> <a href="docs/conferences/NetSci23.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/23-wien-netsci.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>.
 
 			<li>
 				<b>Sep. 13 - 15, 2022:</b> SIAM Network Science Workshop 2022, Online.
-				<br><rd>Talk:</rd> <a href="docs/conferences/SIAM-NS22.pdf" target="_blank" class="publication">Complex networks of lossy oscillators: Multistability, anomalies, and loop flows in power grids</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/22-online-siamns.pdf" target="_blank" class="publication">Complex networks of lossy oscillators: Multistability, anomalies, and loop flows in power grids</a>.
 
 			<li>
 				<b>Jul. 13 - 15, 2022:</b> Autonomous Energy Systems Workshop, NREL, Golden (CO), USA.
-				<br><rd>Poster:</rd> <a href="docs/conferences/NREL22.pdf" target="_blank" class="publication">Locating the source of forced oscillations: A system-agnostic approach</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/22-golden-aesw.pdf" target="_blank" class="publication">Locating the source of forced oscillations: A system-agnostic approach</a>.
 
 			<li>
 				<b>Jul. 5 - 7, 2022:</b> NecSys 2022, Zurich, Switzerland.
-				<br><rd>Poster:</rd> <a href="docs/conferences/Zurich22.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/22-zurich-necsys.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>.
 
 			<li>
 				<b>Apr. 27, 2022:</b> CNLS Seminar, Los Alamos National Laboratory (NM), USA.
-				<br><rd>Talk:</rd> <a href="docs/conferences/LANL22.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/22-losalamos-seminar.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
 				
 			<li>
 				<b>Apr. 20, 2022:</b> SFI Seminar, Santa Fe Institute (NM), USA.
-				<br><rd>Talk:</rd> <a href="docs/conferences/SFI22.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/22-santafe-instituteseminar.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
 				
 			<li>
 				<b>Oct. 25 - 29, 2021:</b> Conference on Complex Systems 2021, Lyon, France.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Lyon21.pdf" target="_blank" class="publication">Flow Network Problems on the n-torus with Asymmetric Couplings</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/21-lyon-ccs.pdf" target="_blank" class="publication">Flow Network Problems on the n-torus with Asymmetric Couplings</a>.
 
 			<li>
 				<b>Jul. 5 - 10, 2021:</b> Networks 2021, Online.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Networks21.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/21-online-networks.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>.
 
 			<li>
 				<b>Jan. 11 - 15, 2021:</b> Grid Science Conference 2021, Online, hosted by Los Alamos National Laboratory (NM), USA.
-				<br><rd>Poster:</rd> <a href="docs/conferences/SantaFe21.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/21-santafe-gridscience.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>.
 
 			<li>
 				<b>Nov. 4 - 8, 2019:</b> Network Dynamics in the Social, Economic, and Financial Sciences, Torino, Italy.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Torino19.pdf" target="_blank" class="publication">Robustness of Election Results Against External Influence</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/19-torino-ndsef.pdf" target="_blank" class="publication">Robustness of Election Results Against External Influence</a>.
 
 			<li>
 				<b>Sep. 23 - 26, 2019:</b> International Workshop on Complex Systems and Networks, Berlin, Germany.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Berlin19.pdf" target="_blank" class="publication">Rate of Change of Frequency under Line Contingencies</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/19-berlin-iwcsn.pdf" target="_blank" class="publication">Rate of Change of Frequency under Line Contingencies</a>.
 
 			<li>
 				<b>Feb 3 - 8, 2019:</b> Future Electric Power Systems, Champ&eacute;ry, Switzerland.
-				<br><rd>Poster:</rd> <a href="docs/conferences/Champery19.pdf" target="_blank" class="publication">Bounding the Desynchronization Time in Electrical Grids under Fluctuating Sources</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/19-champery-feps.pdf" target="_blank" class="publication">Bounding the Desynchronization Time in Electrical Grids under Fluctuating Sources</a>.
 
 			<li>
 				<b>Jan. 18, 2019:</b> CCDC Seminar, Santa Barbara (CA), USA.
-				<br><rd>Talk:</rd> <a href="docs/conferences/SantaBarbara19.pdf" target="_blank" class="publication">Bounding the Destabilization Time in Networks of Noisy Oscillators</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/19-santabarbara-ccdcseminar.pdf" target="_blank" class="publication">Bounding the Destabilization Time in Networks of Noisy Oscillators</a>.
 
 			<li>
 				<b>Jan. 7 - 11, 2019:</b> Grid Science Conference, Santa Fe (NM), USA.
-				<br><rd>Poster:</rd> <a href="docs/conferences/SantaFe19.pdf" target="_blank" class="publication">Bounding the Desynchronization Time in Electrical Grids under Fluctuating Sources</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/19-santafe-gridscience.pdf" target="_blank" class="publication">Bounding the Desynchronization Time in Electrical Grids under Fluctuating Sources</a>.
 
 			<li>
 				<b>Sep. 3 - 7, 2018:</b> Dynamics Days Europe, Loughborough, UK.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Loughborough18.pdf" target="_blank" class="publication">Multistability in Electric Power Grids on Meshed, Complex Networks</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/18-loughborough-dydays.pdf" target="_blank" class="publication">Multistability in Electric Power Grids on Meshed, Complex Networks</a>.
 
 			<li>
 				<b>Jan. 29 - 31, 2018:</b> WE-Hereaus Seminar, Bad Honnef, Germany.
-				<br><rd>Poster:</rd> <a href="docs/conferences/BadHonnef18.pdf" target="_blank" class="publication">The Size of the Sync Basin Revisited</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/18-badhonnef-hereausseminar.pdf" target="_blank" class="publication">The Size of the Sync Basin Revisited</a>.
 
 			<li>
 				<b>Sep. 3 - 8, 2017:</b> International School on Energy Systems, Kloster Seeon, Germany.
-				<br><rd>Poster:</rd> <a href="docs/conferences/KlosterSeeon17.pdf" target="_blank" class="publication">Topologically Protected Loop Flows in High Voltage AC Power Grids</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/17-klosterseeon-ises.pdf" target="_blank" class="publication">Topologically Protected Loop Flows in High Voltage AC Power Grids</a>.
 
 			<li>
 				<b>Feb. 5 - 9, 2017:</b> Future Electric Power Systems, Champ&eacute;ry, Switzerland.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Champery17.pdf" target="_blank" class="publication">Loop Flows and the Number of Power Flow Solutions in Meshed Electric Power Grids</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/17-champery-feps.pdf" target="_blank" class="publication">Loop Flows and the Number of Power Flow Solutions in Meshed Electric Power Grids</a>.
 
 			<li>
 				<b>Jan. 8 - 13, 2017:</b> Grid Science Conference, Santa Fe (NM), USA.
-				<br><rd>Poster:</rd> <a href="docs/conferences/SantaFe17.pdf" target="_blank" class="publication">Multistability of Phase-Locking and Vortices in Locally Coupled Kuramoto Models</a>.
+				<br><rd>Poster:</rd> <a href="docs/conferences/17-santafe-gridscience.pdf" target="_blank" class="publication">Multistability of Phase-Locking and Vortices in Locally Coupled Kuramoto Models</a>.
 
 			<li>
 				<b>Jun. 6 - 10, 2016</b> Dynamics Days Europe, Corfu, Greece.
-				<br><rd>Talk:</rd> <a href="docs/conferences/Corfu16.pdf" target="_blank" class="publication">Multistability of Phase-Locking and Topological Winding Numbers in Locally Coupled Kuramoto Models</a>.
+				<br><rd>Talk:</rd> <a href="docs/conferences/16-corfu-dydays.pdf" target="_blank" class="publication">Multistability of Phase-Locking and Topological Winding Numbers in Locally Coupled Kuramoto Models</a>.
 
 		</ul>
 		
@@ -569,7 +573,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 10th, 2023.
+				Last updated on December 13th, 2023.
 				<br><br><br>
 			</p>
 		</div>
