--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 		</p>
 		
 <!-- ======================= Preprints ================================ -->	
-		<h2>Preprints</h2>
+<!--		<h2>Preprints</h2>
 		
 		<ul>
 			<li>
@@ -181,11 +181,18 @@
 				submitted (2023).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2308.11569" target="_blank">2308.11569</a>
 		</ul>
-
+	-->
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				G. M. Givi, <rd>R. Delabays</rd>, M. Jacquemet, and P. Jacquod, 
+				<a href="docs/articles/Givi24.pdf" target="_blank" class="publication">On the robustness of democratic electoral processes to computational propaganda</a>,
+				Scientific Reports <b>14</b>, 193 (2024).
+				<br><ps>DOI: <a href="https://doi.org/10.1038/s41598-023-50648-6" target="_blank">10.1038/s41598-023-50648-6</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2308.11569" target="_blank">2308.11569</a>
+					
 			<li>
 				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
 				<a href="docs/articles/Delabays23b.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>,
@@ -573,7 +580,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on December 13th, 2023.
+				Last updated on January 2nd, 2024.
 				<br><br><br>
 			</p>
 		</div>
