--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
 		</p>
 		
 <!-- ======================= Preprints ================================ -->	
-<!--		<h2>Preprints</h2>
+		<h2>Preprints</h2>
 		
 		<ul>
 			<li>
-				G. M. Givi, <rd>R. Delabays</rd>, M. Jacquemet, and P. Jacquod,
-				<a href="docs/articles/Givi23.pdf" target="_blank" class="publication">On the robustness of democratic electoral processes to computational propaganda</a>,
-				submitted (2023).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2308.11569" target="_blank">2308.11569</a>
+				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rlfer, and Y. Zhang,
+				<a href="docs/articles/Delabays24a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
+				submitted (2024).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2402.00078" target="_blank">2402.00078</a>
 		</ul>
-	-->
+
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
@@ -580,7 +580,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on January 2nd, 2024.
+				Last updated on February 2nd, 2024.
 				<br><br><br>
 			</p>
 		</div>
