--- a/index.html
+++ b/index.html
@@ -384,6 +384,10 @@
 
 		<ul>
 			<li>
+				<b>Feb. 5 - 9, 2024:</b> Champ&eacute;ry Power Conference 2024.
+				<br><rd>Talk:</rd> <a href="docs/conferences/24-champery-cpc.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>.
+
+			<li>
 				<b>Dec. 13 - 15, 2023:</b> IEEE CDC 2023, Singapore.
 				<br><rd>Talk:</rd> <a href="docs/conferences/23-singapore-cdc.pdf" target="_blank" class="publication">Semicontraction and Synchronization of Kuramoto-Sakaguchi Oscillator Networks</a>.
 
@@ -580,7 +584,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on February 2nd, 2024.
+				Last updated on February 8th, 2024.
 				<br><br><br>
 			</p>
 		</div>
