--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -40,8 +40,8 @@
 			</li>
 			<li>
 				November 9, 2023,<br>
-				<b><i>Dima Geshkenbein</i></b> (ETH Zurich),<br>
-				<u>Vortices in superconductors.</u><br>
+				<b>Dima Geshkenbein</b> (ETH Zurich),<br>
+				<u><i>Vortices in superconductors.</i></u><br>
 			</li>
 			<li>
 				November 2, 2023,<br>
@@ -65,7 +65,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 24th, 2023.
+				Last updated on February 13th, 2024.
 				<br><br><br>
 			</p>
 		</div>
