--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rlfer, and Y. Zhang,
+				<rd>R. Delabays</rd>, G. De Pasquale, F. D&ouml;rfler, and Y. Zhang,
 				<a href="docs/articles/Delabays24a.pdf" target="_blank" class="publication">Hypergraph reconstruction from dynamics</a>,
 				submitted (2024).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2402.00078" target="_blank">2402.00078</a>
