added THIS software repo

--- a/index.html
+++ b/index.html
@@ -353,6 +353,10 @@
 		
 		<ul>
 			<li>
+				<rd>R. Delabays</rd>, G. De Pasquale, and Y. Zhang,
+				<i>THIS: Taylor-based Hypergraph Inference using SINDy</i>, Zenodo (2024).
+				URL: <a href="https://doi.org/10.5281/zenodo.10530470" target="_blank">10.5281/zenodo.10530470</a>
+			<li>
 				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
 				<i>SALO: System-Agnostic Localization of Oscillatons</i>, GitHub (2022).
 				URL: <a href="https://github.com/lanl-ansi/SALO" target="_blank">github.com/lanl-ansi/SALO</a>
@@ -584,7 +588,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on February 8th, 2024.
+				Last updated on February 27th, 2024.
 				<br><br><br>
 			</p>
 		</div>
