--- a/mathphys-seminar.html
+++ b/mathphys-seminar.html
@@ -30,6 +30,11 @@
 		
 		<ul>
 			<li>
+				April 9, 2024,<br>
+				<b>Fabian Pedregosa</b> (Google),<br>
+				<u><i>Machine Unlearning: Definitions, Methods, and Auditing for Trustworthy AI.</i></u><br>
+			</li>
+			<li>
 				March 25, 2024,<br>
 				<b>Sebastien Ott</b> (EPFL, Lausanne),<br>
 				<u><i>Interfaces in 2d low temperature lattice spin models.</i></u><br>
@@ -71,7 +76,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on March 27th, 2024.
+				Last updated on April 10th, 2024.
 				<br><br><br>
 			</p>
 		</div>
